--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
                     </div>
                     <div class="copyright">
                         <p>
-                            © 2021 Persono Template<br />
-                            Created by <a href="https://themeforest.net/user/frenify/portfolio" target="_blank">Frenify</a>
+                            © 2025 RTS<br />
+                            Created by <a href="#" target="_blank">Rts Hub</a>
                         </p>
                     </div>
                 </div>
